--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,18 @@ body, html {width: 100%; height: 100%; overflow: hidden;}
     z-index: 3;
     background-image: url(../img/visored-helm.svg);
 }
+.card__wrapper{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.card__health{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
