--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,19 @@ body, html {width: 100%; height: 100%; overflow: hidden;}
     color: #fff;
     transition: all .3s;
 }
+.weapon{
+    position: absolute;
+    height: 20vmin;
+    width: 20vmin;
+    font-size: 5vmin;
+    font-weight: bold;
+    text-align: center;
+    line-height: 15vmin;
+    color: #fff;
+    transition: all .3s;
+    z-index: 3;
+    background-image: url(../img/battered-axe.svg);
+}
 .hero{
     position: absolute;
     height: 20vmin;
@@ -62,10 +75,20 @@ body, html {width: 100%; height: 100%; overflow: hidden;}
     width: 100%;
     height: 100%;
 }
-.card__health{
+.health{
     position: absolute;
     top: 0;
     right: 0;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.attack{
+    position: absolute;
+    bottom: 0;
+    left: 0;
     width: 40px;
     height: 40px;
     display: flex;
