--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
-body, html {width: 100%; height: 100%; overflow: hidden;}
+body, html {
+    width: 100%;
+    height: 100%; 
+    overflow: hidden;
+    font-family: 'New Tegomin', serif;
+}
 
 .wrapper{
     width: 68vmin;
@@ -24,23 +29,31 @@ body, html {width: 100%; height: 100%; overflow: hidden;}
     position: absolute;
     height: 20vmin;
     width: 20vmin;
-    font-size: 5vmin;
+    font-size: 3.5vmin;
     font-weight: bold;
     text-align: center;
     line-height: 15vmin;
     color: #fff;
     transition: all .3s;
-    background-image: url(../img/troll.svg);
+    background-image: url(../img/orc.svg);
+    background-size: 65%;
+    background-position: center;
+    background-color: #383636;
+    background-repeat: no-repeat;
 }
 .heal{
     position: absolute;
     height: 20vmin;
     width: 20vmin;
-    font-size: 5vmin;
+    font-size: 3.5vmin;
     font-weight: bold;
     text-align: center;
     line-height: 15vmin;
-    background-image: url(../img/carrot.svg);
+    background-image: url(../img/beer-mug.svg);
+    background-size: 60%;
+    background-position: center;
+    background-color: #383636;
+    background-repeat: no-repeat;
     color: #fff;
     transition: all .3s;
 }
@@ -48,27 +61,35 @@ body, html {width: 100%; height: 100%; overflow: hidden;}
     position: absolute;
     height: 20vmin;
     width: 20vmin;
-    font-size: 5vmin;
+    font-size: 3.5vmin;
     font-weight: bold;
     text-align: center;
     line-height: 15vmin;
     color: #fff;
     transition: all .3s;
     z-index: 3;
-    background-image: url(../img/battered-axe.svg);
+    background-image: url(../img/axe.svg);
+    background-size: 62%;
+    background-color: #383636;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 .hero{
     position: absolute;
     height: 20vmin;
     width: 20vmin;
-    font-size: 5vmin;
+    font-size: 3.5vmin;
     font-weight: bold;
     text-align: center;
     line-height: 15vmin;
     color: #fff;
     transition: all .3s;
     z-index: 3;
-    background-image: url(../img/visored-helm.svg);
+    background-image: url(../img/bigfoot.svg);
+    background-size: 65%;
+    background-color: #383636;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 .card__wrapper{
     position: relative;
@@ -77,10 +98,23 @@ body, html {width: 100%; height: 100%; overflow: hidden;}
 }
 .health{
     position: absolute;
-    top: 0;
-    right: 0;
-    width: 40px;
-    height: 40px;
+    top: 0.5vmin;
+    right: 0.5vmin;
+    width: 5vmin;
+    height: 5vmin;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: url(../img/heart.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.value{
+    position: absolute;
+    top: 0.5vmin;
+    right: 0.5vmin;
+    width: 5vmin;
+    height: 5vmin;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -88,10 +122,23 @@ body, html {width: 100%; height: 100%; overflow: hidden;}
 .attack{
     position: absolute;
     bottom: 0;
-    left: 0;
-    width: 40px;
-    height: 40px;
+    left: 1.5vmin;
+    width: 5vmin;
+    height: 5vmin;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-left: 1.5vmin;
+}
+.attack::before{
+    content: '';
+    position: absolute;
+    bottom: 0.5vmin;
+    left: 0;
+    width: 3.5vmin;
+    height: 3.5vmin;
+    background-image: url(../img/icon-sword2.png);
+    background-size: cover;
+    transform: scale(-1, 1);
+    transform: rotate(-80deg);
 }
