--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 body, html {
-    width: 100%;
-    height: 100%; 
-    overflow: hidden;
     font-family: 'New Tegomin', serif;
+    background-image: url(../img/cave.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 0%;
 }
 
 .wrapper{
@@ -15,8 +16,44 @@ body, html {
     height: 10vmin;
     background-color: rgb(95, 64, 29);
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+}
+.character{
+    width: 7vmin;
+    height: 7vmin;
+    background-image: url(../img/werewolf.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: 0.3s;
+    cursor: pointer;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+.character span{
+    position: relative;
+    display: block;
+    font-size: 12px;
+}
+.character span::before{
+    content: '50';
+    position: absolute;
+    bottom: 0.2vmin;
+    right: -3vmin;
+    width: 3vmin;
+    height: 3vmin;
+    background-image: url(../img/coin.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    text-align: center;
+    font-weight: 900;
+    color: rgb(68, 53, 53);
+}
+.character:hover{
+    transform: scale(1.1);
 }
 .gold{
     position: relative;
