--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,105 @@
+*{padding: 0;margin: 0;border: 0;}
+*,*:before,*:after{-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box;}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+nav,footer,header,aside{display: block;}
+html,body{height: 100%;width: 100%;font-size: 100%;line-height: 1;font-size: 14px;-ms-text-size-adjust: 100%;-moz-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;}
+input,button,textarea{font-family:inherit;}
+input::-ms-clear{display: none;}
+button{cursor: pointer;}
+button::-moz-focus-inner {padding:0;border:0;}
+a, a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+/*--------------------*/
+img {max-width: 100%;}
 body, html {
-    font-family: 'New Tegomin', serif;
+    font-family: 'New Tegomin';
     background-image: url(../img/cave.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 0%;
 }
-
+.container{
+    width: 90vmax; 
+    margin: 0 auto; 
+    position: relative;
+}
+.book__container{
+    background-color: rgb(70, 45, 17);
+    position: absolute;
+    top: 3vmin;
+    left: 0;
+    width: 43vmin;
+    border-radius: 1vmin;
+    height: 12vmin;
+    transition: 0.6s;
+    overflow: hidden;
+}
+.book-active{
+    height: 55vmin;
+}
+.book__head{
+    margin: 1vmin auto 1vmin;
+    width: 40vmin;
+    height: 10vmin;
+    background-color: rgb(95, 64, 29);
+    border-radius: 1vmin;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.book__img{
+    width: 5vmax;
+    height: 10vmin;
+    padding-left: 2vmin;
+    display: flex;
+    align-items: center;
+}
+.book__title{
+    margin: 0;
+    color: white;
+    text-align: center;
+    font-size: 3.2vmin;
+    line-height: 3.4vmin;
+    font-family: 'Balsamiq Sans';
+}
+.book__items{
+   display: flex;
+   flex-direction: column;
+}
+.book__item{
+    width: 40vmin;
+    height: 20vmin;
+    background-color: rgb(95, 64, 29);
+    border-radius: 1vmin;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 1vmin;
+}
+.orc__title{
+    padding: 1vmin;
+    width: 30vmin;
+    margin: 0;
+    color: white;
+    text-align: center;
+    font-size: 2.5vmin;
+    line-height: 3.4vmin;
+    font-family: 'Balsamiq Sans';
+}
 .wrapper{
     width: 68vmin; 
     margin: 0 auto; 
-    background-color:#aaaca8;
+    padding-top: 3vmin;
 }
 .panel{
+    border-top-left-radius: 1vmin;
+    border-top-right-radius: 1vmin;
     width: 100%;
     height: 10vmin;
     background-color: rgb(95, 64, 29);
@@ -38,10 +126,10 @@ body, html {
     font-size: 12px;
 }
 .character span::before{
-    content: '50';
+    content: '10';
     position: absolute;
-    bottom: 0.2vmin;
-    right: -3vmin;
+    bottom: 0vmin;
+    right: -1vmin;
     width: 3vmin;
     height: 3vmin;
     background-image: url(../img/coin.svg);
@@ -81,6 +169,7 @@ body, html {
     width: 100%;
     height: 68vmin; 
     position: relative;
+    background-color:#aaaca8;
 }
 .cell{
     width: 20vmin;
@@ -104,6 +193,22 @@ body, html {
     transition: all .3s;
     background-image: url(../img/orc.svg);
     background-size: 65%;
+    background-position: center;
+    background-color: #383636;
+    background-repeat: no-repeat;
+}
+.ghost{
+    position: absolute;
+    height: 20vmin;
+    width: 20vmin;
+    font-size: 3.5vmin;
+    font-weight: bold;
+    text-align: center;
+    line-height: 5vmin;
+    color: #fff;
+    transition: all .3s;
+    background-image: url(../img/ghost.svg);
+    background-size: 60%;
     background-position: center;
     background-color: #383636;
     background-repeat: no-repeat;
@@ -134,7 +239,6 @@ body, html {
     line-height: 5vmin;
     color: #fff;
     transition: all .3s;
-    z-index: 3;
     background-image: url(../img/axe.svg);
     background-size: 62%;
     background-color: #383636;
@@ -151,9 +255,24 @@ body, html {
     line-height: 5vmin;
     color: #fff;
     transition: all .3s;
-    z-index: 3;
     background-image: url(../img/coin.svg);
     background-size: 50%;
+    background-color: #383636;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.poison{
+    position: absolute;
+    height: 20vmin;
+    width: 20vmin;
+    font-size: 3.5vmin;
+    font-weight: bold;
+    text-align: center;
+    line-height: 5vmin;
+    color: #fff;
+    transition: all .3s;
+    background-image: url(../img/potion.svg);
+    background-size: 60%;
     background-color: #383636;
     background-repeat: no-repeat;
     background-position: center;
@@ -168,7 +287,6 @@ body, html {
     line-height: 5vmin;
     color: #fff;
     transition: all .3s;
-    z-index: 3;
     background-image: url(../img/bigfoot.svg);
     background-size: 65%;
     background-color: #383636;
@@ -225,4 +343,20 @@ body, html {
     background-size: cover;
     transform: scale(-1, 1);
     transform: rotate(-80deg);
+}
+.poisoned {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.poisoned::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url(../img/poisonc5t.gif);
+    background-size: cover;
+    background-position: center;
 }
